fix: SlideGetStarted on small screens

--- a/src/components/Footer/index.module.scss
+++ b/src/components/Footer/index.module.scss
@@ -32,8 +32,7 @@
   }
 
   @media screen and (max-width: $mobileBreakPoint) {
-    min-width: unset;
-    margin: 0 24px;
+    padding: 0 24px;
 
     .guide {
       display: block;
